# hitagi

./: .gitignore  Cargo.toml  README.md  build.rs  bunfig.toml  package.json
benches/: cache_load.rs  dense_query.rs  fingerprint.rs  ranking_boost.rs
scripts/: _shared.mjs  bench-compare.sh  bench.sh  bump-minor.mjs  bump-patch.mjs
src/: agent_prompt.rs  bin_codec.rs  cache.rs  cli.rs  commands.rs  error.rs  git.rs  lang.rs  lib.rs  main.rs  models.rs  output.rs  parser.rs  queries.rs  repo.rs
src/framework/: mod.rs  next.rs
src/search/: chunk_store.rs  chunker.rs  dense.rs  engine.rs  fast_wp.rs  fuse.rs  mod.rs  model2vec.rs  model_cache.rs  persist.rs  ranking.rs  sparse.rs  tokenizer_cache.rs  tokens.rs  types.rs  walker.rs
tests/: cli.rs  diff.rs  framework.rs  search_relevance.rs
tests/fixtures/next_app/: package.json
tests/fixtures/next_app/app/: actions.ts  default-action.ts  error.tsx  page.tsx
tests/fixtures/next_app/app/(marketing)/promo/: page.tsx
tests/fixtures/next_app/app/_components/: Helper.tsx
tests/fixtures/next_app/app/api/users/: route.ts
tests/fixtures/next_app/app/blog/[...slug]/: page.tsx
tests/fixtures/next_app/app/forms/: submit.ts
tests/fixtures/next_app/app/users/[id]/: page.tsx
tests/fixtures/next_pages/: package.json
tests/fixtures/next_pages/pages/: about.tsx
tests/fixtures/next_pages/pages/api/: users.ts
tests/fixtures/next_pages/pages/api/posts/: index.ts
tests/fixtures/next_pages/pages/users/: [id].tsx
tests/fixtures/sample_repo/apps/desktop/src/: auth.ts
tests/fixtures/sample_repo/apps/desktop/src-tauri/src/: main.rs
tests/fixtures/sample_repo/apps/desktop/src/components/: Button.tsx
tests/fixtures/sample_repo/src/: auth.ts  schema.prisma
tests/fixtures/sample_repo/tools/foo-src-tauri/src/: main.rs
tests/fixtures/search_relevance/: README.md  golden.json
tests/fixtures/search_relevance/src/: git.rs
tests/fixtures/search_relevance/tests/: git_tests.rs
