[package]
name = "hitagi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hitagi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22.6"

[dev-dependencies]
assert_cmd = "2"

[build-dependencies]
cc = "1"
