[package]
name = "hitagi"
version = "0.1.3"
edition = "2021"

[lib]
name = "hitagi"
path = "src/lib.rs"

[[bin]]
name = "hitagi"
path = "src/main.rs"

[dependencies]
bincode = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
half = { version = "2", features = ["serde"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
ignore = "0.4"
ndarray = { version = "0.16", features = ["rayon", "serde"] }
once_cell = "1"
rayon = "1"
regex = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rustc-hash = "2"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tree-sitter = "0.26"
tree-sitter-language-pack = "1"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "dense_query"
harness = false

[[bench]]
name = "ranking_boost"
harness = false

[[bench]]
name = "cache_load"
harness = false

[[bench]]
name = "fingerprint"
harness = false
